# ai-qa-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_servers.json  pyproject.toml  requirements.txt  run_api.py  test.txt  test_config.py
scripts/: add_mcp_table.sql  init.sql  migration_add_reasoning_steps.sql
src/ai_qa/application/: agent_service.py  chat_service.py  knowledge_base_service.py  knowledge_service.py  mcp_settings_service.py  user_service.py
src/ai_qa/config/: logging.py  settings.py
src/ai_qa/domain/: entities.py  exceptions.py  ports.py
src/ai_qa/infrastructure/auth/: __init__.py  security.py
src/ai_qa/infrastructure/database/: __init__.py  connection.py  models.py
src/ai_qa/infrastructure/document/: __init__.py  pdf_reader.py
src/ai_qa/infrastructure/embedding/: dashscope_embedding.py
src/ai_qa/infrastructure/llm/: base.py  qwen_adapter.py
src/ai_qa/models/: __init__.py  auth.py  chat.py  common.py  mcp.py  schemas.py
tests/: conftest.py  run.py  test_memory.py  test_rag.py  test_vector_store.py
tests/integration/: test_api.py
tests/others/: chat.py  chat_langchain.py  chat_langchain_memory.py  chat_window_memory.py  chat_with_history.py  main.py  test_function_calling.py  try_agent_service.py  try_config.py  try_db.py  try_mcp_client.py  try_mcp_client_service.py  try_mcp_other.py  try_rag.py
tests/unit/: test_agent_service.py  test_chat_service.py  test_knowledge_base_service.py  test_knowledge_service.py  test_mcp_config.py  test_qwen_adapter.py  test_security.py  test_user_service.py
(+34 files in other folders)
